--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Menu Item"
-        android:id="@+id/menuItem"/>
+    <item android:title="Setting"
+        android:id="@+id/menuSetting"/>
+    <item android:title="Exit"
+        android:id="@+id/menuExit"></item>
 </menu>
