--- a/app/src/main/res/layout/dialog_edit.xml
+++ b/app/src/main/res/layout/dialog_edit.xml
@@ -3,20 +3,27 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="320dp"
     android:orientation="vertical"
+    android:background="#473C8B"
     android:padding="5dp"
     android:layout_height="wrap_content">
 
     <TextView
-        android:text="Edit"
+        android:text="EDIT"
+        android:textStyle="bold"
         android:layout_weight="1"
-        android:gravity="center"
-        android:textSize="30sp"
-        android:layout_width="match_parent"
+        android:textSize="24sp"
+        android:layout_marginLeft="10dp"
+        android:textColor="#DCDCDC"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"></TextView>
     <EditText
         android:id="@+id/etEdit"
         android:layout_weight="1"
-        android:text="Enter"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:textColor="#B5B5B5"
+        android:textSize="20sp"
+        android:textColorHint="#B5B5B5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </EditText>
@@ -28,16 +35,45 @@
         <Button
             android:id="@+id/btReminder"
             android:layout_width="wrap_content"
+            android:background="@color/design_default_color_primary_dark"
+            android:textColor="@color/cardview_light_background"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Reminder"></Button>
+            android:layout_marginRight="60dp"
+            android:text="DATE"></Button>
+        <TextView
+            android:id="@+id/txtReminder"
+            android:textSize="18sp"
+            android:textColor="#DCDCDC"
+            android:textStyle="italic"
+            android:text="dd//mm/yy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </TextView>
     </LinearLayout>
-    <TextView
-        android:id="@+id/txtReminder"
-        android:text="dd//mm/yy"
+    <LinearLayout
         android:layout_width="match_parent"
+        android:layout_margin="10dp"
         android:layout_height="wrap_content">
-    </TextView>
+
+        <Button
+            android:id="@+id/btTime"
+            android:layout_width="wrap_content"
+            android:background="@color/design_default_color_primary_dark"
+            android:textColor="@color/cardview_light_background"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="60dp"
+            android:text="Time"></Button>
+        <TextView
+            android:id="@+id/txtTime"
+            android:textSize="18sp"
+            android:textColor="#DCDCDC"
+            android:textStyle="italic"
+            android:text="00:00"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </TextView>
+    </LinearLayout>
+
 
     <LinearLayout
         android:layout_marginTop="5dp"
@@ -47,14 +83,22 @@
             android:text="Edit"
             android:layout_weight="1"
             android:id="@+id/btEdit"
-            android:layout_width="match_parent"
+            android:background="@color/design_default_color_primary_dark"
+            android:textColor="@color/cardview_light_background"
+            android:layout_width="30dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginLeft="40dp"
             android:layout_height="wrap_content">
         </Button>
+
         <Button
             android:layout_weight="1"
             android:text="Cancel"
             android:id="@+id/btCancelEdit"
-            android:layout_width="match_parent"
+            android:textColor="@color/cardview_light_background"
+            android:background="@color/design_default_color_primary_dark"
+            android:layout_width="30dp"
+            android:layout_marginRight="40dp"
             android:layout_height="wrap_content">
         </Button>
     </LinearLayout>
